src/test/ui/associated-types/higher-ranked-projection.good.stderr
error: compilation successful
  --> $DIR/higher-ranked-projection.rs:24:1
   |
LL | / fn main() { //[good]~ ERROR compilation successful
LL | |     foo(());
LL | |     //[bad]~^ ERROR E0495
LL | | }
   | |_^

error: aborting due to previous error

